# wordle-backend.rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
benchmarks/: Makefile  create.json  create_game.json  frontend.json  get_state.json  manage_game.json  play.json  register.json  user_id.json  wordle.cookie
src/: README.md  game.rs  main.rs  mongo_utils.rs  routes.rs  user.rs
