[package]
name = "wordle-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
chrono = "0.4.19"
fern = "0.6.0"
mongodb = "2.1.0"
serde = "1.0.136"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets"]
